# kantv

./: .gitignore  .gitmodules  AUTHORS  LICENSE  LICENSE-chinese  NEWS.md  README-qnn.md  README.md  VERSION.txt  build-all-android-native-libs.sh  build-all-native-libs.sh  build-all.sh  init-android-exo.sh  init-android-j4a.sh  init-android-libyuv.sh  init-android-openssl.sh  init-android-prof.sh  init-android-soundtouch.sh  init-android.sh  init-ios-openssl.sh  init-ios.sh
android/contrib/: .gitignore  compile-brotli.sh  compile-curl.sh  compile-libiconv.sh  compile-libxml2.sh  compile-libz.sh
android/ijkplayer/: build.gradle  gradle.properties  settings.gradle
cdeosplayer/: .gitignore  build.gradle  config.gradle  constants.gradle  gradle.properties  publish.gradle  settings.gradle
cdeosplayer/cdeosplayer-exo2/: .gitignore  build.gradle  gradle.properties
cdeosplayer/cdeosplayer-lib/: build.gradle  gradle.properties
cdeosplayer/kantv/: build.gradle
config/: module-default.sh
core/: .gitignore  CMakeLists.txt  README.md  build-android-jni-lib.sh
core/ggml/: .gitignore  CMakeLists.txt  README.md  build-android-jni-lib.sh
core/ggml/barkcpp/: bark.cpp  encodec.cpp  ggml-allocr.c
core/ggml/jni/: Inception_v3.cpp  clip.cpp  clip.h  ggml-jni-impl-external.cpp  ggml-jni-impl.cpp  ggml-jni.c  ggml-jni.h  ggml-qnn-impl.cpp  ggml-qnn.cpp  ggml-qnn.h  kantv-asr.h  llama-bench.cpp  llm-inference.cpp  minicpmv-cli.cpp  minicpmv.cpp  minicpmv.h  minicpmv_io.cpp  minicpmv_io.h  mnist-ggml.cpp  mnist-inference.cpp  saver_output.c  tts-inference.cpp
core/ggml/llamacpp/: .gitignore  Makefile  diff-with-upstream-llamacpp.sh  ggml-alloc.c  ggml-backend.c  ggml-backend.h  ggml-qnn-impl.cpp  ggml-qnn.cpp  ggml-qnn.h  ggml.c  ggml.h  llama.cpp  sync-with-upstream-llamacpp.sh
core/ggml/llamacpp/common/: build-info.cpp  common.cpp  common.h  grammar-parser.h  log.h  stb_image.h
core/ggml/llamacpp/examples/benchmark/: benchmark-matmult.cpp
core/ggml/llamacpp/include/: ggml-qnn.h
core/ggml/llamacpp/src/: Makefile  cmake_install.cmake
core/ggml/llamacpp/tests/: .gitignore  test-backend-ops.cpp
core/ggml/llamacpp/tests/ggml-qnn/: .gitignore  CMakeLists.txt  README.md  build-ggml-qnn.sh  ggml-qnn-ut-build-run.sh  ggml-qnn-ut.cpp  run-ggml-qnn.sh  test-qnn-ops.cpp
core/ggml/llamacpp/tests/ggml-qnn-test-ops/: CMakeLists.txt  test-backend-ops  test-backend.sh
core/ggml/llamacpp/tests/ggml-qnn-ut-in-kantv/: CMakeLists.txt  README.md  build-ggml-qnn.sh  run-ggml-qnn.sh  test-qnn-npu  test-qnn-npu.cpp  test-qnn-ops.cpp
core/ggml/qnnsample/: QnnSampleApp.cpp  QnnSampleMain.cpp  QnnTypeMacros.hpp  SampleApp.hpp
core/ggml/qnnsample/Log/: LogUtils.cpp  Logger.hpp
core/ggml/qnnsample/PAL/include/PAL/: Debug.hpp
core/ggml/qnnsample/PAL/src/linux/: DynamicLoading.cpp  FileOp.cpp
core/ggml/qnnsample/Utils/: DataUtil.cpp  DynamicLoadUtil.cpp  DynamicLoadUtil.hpp  IOTensor.hpp  QnnSampleAppUtils.cpp  QnnSampleAppUtils.hpp
core/ggml/stablediffusioncpp/: clip.hpp  esrgan.hpp  ggml_extend.hpp  model.cpp  pmid.hpp  stable-diffusion.cpp  unet.hpp  util.h
core/ggml/whispercpp/: .gitignore  Makefile  diff-with-upstream-whispercpp.sh  sync-with-upstream-whispercpp.sh  whisper.cpp  whisper.h
core/ggml/whispercpp/examples/bench/: bench.cpp
core/ggml/whispercpp/examples/main/: main.cpp
core/media/include/: kantv-asr.h  kantv-media.h
core/ncnn/: .gitignore  CMakeLists.txt
core/ncnn/jni/: mnist-int8.mem.h  mnist.mem.h  nanodet.cpp  nanodet.h  ncnn-jni-impl.cpp  ncnn-jni.c  ncnn-jni.h  ndkcamera.cpp  ndkcamera.h  res.id.h  res.img.h  scrfd.cpp  scrfd.h  scrfdncnn.cpp
core/ncnn/ncnn-20240410-android-vulkan/arm64-v8a/include/ncnn/: layer_shader_type_enum.h  platform.h
core/ncnn/ncnn-20240410-android-vulkan/arm64-v8a/lib/cmake/: OGLCompilerTargets.cmake  OSDependentTargets.cmake  SPIRVTargets.cmake  glslangTargets.cmake
core/ncnn/ncnn-20240410-android-vulkan/arm64-v8a/lib/cmake/glslang/: glslang-config.cmake  glslang-targets.cmake
core/ncnn/ncnn-20240410-android-vulkan/arm64-v8a/lib/cmake/ncnn/: ncnn.cmake  ncnnConfig.cmake
core/ncnn/ncnn-src/: .astylerc  .gitignore  CMakeLists.txt  build-libncnn-for-kantv.sh
core/ncnn/ncnn-src/docs/: Home.md
core/ncnn/ncnn-src/include/: README.md
core/ncnn/opencv-mobile-4.9.0-android/sdk/native/jni/include/opencv2/: core.hpp  features2d.hpp
core/ncnn/opencv-mobile-4.9.0-android/sdk/native/jni/include/opencv2/core/: base.hpp  cvdef.h
doc/: ffmpeg_3.4_vs_bilibili_ffmpeg.txt  how-to-build-tensorflowlite-for-android.txt  how-to-modify-ffmpeg.txt
doc/qos/: livelog_1.gp  livelog_1_in_single_png.gp
doc/tensorflow/: README.md
docs/: .gitignore  FAQ.md  acknowledgement.md  compliance-statement.md  high-end-android-phone.md  how-to-create-customized-playlist-in-cloud-server.md  how-to-debug-jni.txt  how-to-reduce-the-size-of-apk.md  how-to-reduce-the-size-of-build-apk.md  how-to-setup-customized-kantvserver-in-local.md  how-to-sign-apk.md  how-to-sign-apk.txt  how-to-use-openssl.txt  how-to-use-whispercpp-ffmpeg-add-subtitle-to-video.md  how-to-use-whispercpp-ffmpeg-add-subtitle-to-video.txt  how-to-validate-ai-algorithm-model-on-android-using-this-project.md  how-to-verify-ggml-qnn-backend-on-android.md  what-is-the-most-difficult-problem-for-this-project.md  why-focus-on-ggml-and-ncnn-on-android.md  why-focus-on-ggml-and-ncnn.md  why-focus-on-ggml-for-android.md
examples/ff_encode/: .gitignore  Makefile  main.c
examples/ff_terminal/: CMakeLists.txt  README.md  build.sh  clean.sh  fb.c  fb.h  main.c
examples/ff_terminal/terminal/: get_key.c  terminal.c  vkey.h
ijkmedia/ijkj4a/: Android.mk
ijkmedia/ijkplayer/: Android.mk  ff_ffplay.c  ff_ffplay.h  ff_ffplay_def.h  ijkplayer.c  ijkplayer.h
ijkmedia/ijksdl/: Android.mk  ijksdl_log.h
ios/: compile-ffmpeg.sh  compile-libiconv.sh  compile-libxml2.sh  compile-libz.sh  compile-openssl.sh
ios/tools/: do-compile-ffmpeg.sh  (+4 more)
prebuilts/: .gitignore  README.md
release/: README.md  release-note.txt
tools/: .clang-format  catch_log.sh  codeformat.sh  img2c.py  run_ndkstack.sh
(+999 files in other folders)
